--- a/PIM/PIM.Web/PIM.Web.csproj
+++ b/PIM/PIM.Web/PIM.Web.csproj
@@ -179,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Controllers\Api\" />
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
