--- a/PIM/PIM.Web/packages.config
+++ b/PIM/PIM.Web/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="chosen" version="1.2.0" targetFramework="net472" />
+  <package id="chosen.jquery" version="1.2.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net472" />
