--- a/PIM/PIM.Infrastrusture/PIM.Infrastructure.csproj
+++ b/PIM/PIM.Infrastrusture/PIM.Infrastructure.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EmployeeService.cs" />
     <Compile Include="Services\GroupService.cs" />
+    <Compile Include="Services\LinqHelper.cs" />
     <Compile Include="Services\ProjectService.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
