--- a/PIM/PIM.Core/PIM.Core.csproj
+++ b/PIM/PIM.Core/PIM.Core.csproj
@@ -50,14 +50,14 @@
     <Compile Include="Exceptions\InvalidEndDateException.cs" />
     <Compile Include="Exceptions\InvalidVisaException.cs" />
     <Compile Include="Exceptions\ProjectHasBeenDeletedException.cs" />
-    <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Entities\Project.cs" />
     <Compile Include="Entities\Employee.cs" />
     <Compile Include="Entities\Group.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProjectCriteria.cs" />
+    <Compile Include="Entities\ProjectCriteria.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
