--- a/PIM/PIM.Infrastrusture/PIM.Infrastructure.csproj
+++ b/PIM/PIM.Infrastrusture/PIM.Infrastructure.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{51571DF8-631E-4577-BB96-1FEC0900CB65}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PIM.DataAccess</RootNamespace>
-    <AssemblyName>PIM.DataAccess</AssemblyName>
+    <RootNamespace>PIM.Infrastructure</RootNamespace>
+    <AssemblyName>PIM.Infrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
