--- a/PIM/PIM.UnitTest/packages.config
+++ b/PIM/PIM.UnitTest/packages.config
@@ -3,5 +3,6 @@
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.7.0" targetFramework="net472" />
 </packages>
