--- a/PIM/PIM.Web/Views/Web.config
+++ b/PIM/PIM.Web/Views/Web.config
@@ -27,13 +27,19 @@
   </appSettings>
 
   <system.webServer>
+  
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
+    <security>
+      <requestFiltering allowDoubleEscaping="true"/>
+    </security>
   </system.webServer>
 
   <system.web>
+    <httpRuntime requestPathInvalidCharacters="&lt;,&gt;,&amp;,:,\,?"/>
+    <globalization enableClientBasedCulture="true" culture="auto" uiCulture="auto"/>
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
